changed mark name

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
     no_mongo_db: Marks tests as to not use the auto-use mongo_db fixture
-    no_mock_hashlib_pbkdf2: Marks tests to not use the auto-use pbkdf2 hashing fixture
+    no_mock_password_hash: Marks tests to not use the auto-use pbkdf2 hashing fixture
