--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^5.4.1"
 black = "^19.10b0"
 mongomock = "^3.19.0"
 pytest-dotenv = "^0.4.0"
+tox = "^3.14.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
