--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
         git add .
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "ci: Automated build updated Requirements and Formatted with Black" -a | exit 0
+        git commit -m "ci: Auto-Formatted with Black" -a | exit 0
         git pull
     - name: Push changes
       uses: ad-m/github-push-action@master
@@ -53,7 +53,7 @@ jobs:
         git add .
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "ci: Automated build updated Requirements and Formatted with Black" -a | exit 0
+        git commit -m "ci: Automated build updated Requirements" -a | exit 0
         git pull
     - name: Push changes
       uses: ad-m/github-push-action@master
