--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py38
+isolated_build = True
 
 [pytest]
 strict = true
@@ -16,8 +17,8 @@ python =
     
     
 [testenv]
+whitelist_externals = poetry
 description = Run tests
-extras = tests
-deps = pytest
 commands =
-    pytest tests
+    poetry install -v
+    poetry run pytest tests/
