--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ mongomock = "^3.19.0"
 pytest-dotenv = "^0.4.0"
 tox = "^3.14.6"
 
+[tool.poetry.extras]
+test = ["pytest ./tests"]
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
