--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,17 +74,13 @@ jobs:
       uses: actions/setup-python@v1.2.0
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Poetry
-      run: pip install poetry
-    - name: Turn off Virtualenvs
-      run: poetry config virtualenvs.create false
+    - name: Install tox
+      run: pip install tox
     - name: Cache Dependancies
       uses: actions/cache@v1.1.2
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
         restore-keys: ${{ runner.os }}-poetry-
-    - name: Install Dependancies
-      run: poetry install
     - name: "Run tox targets for ${{ matrix.python-version }}"
-      run: "python -m tox"
+      run: tox
