--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -76,6 +76,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install tox
       run: pip install tox
+    - name: Install Poetry
+      run: pip install poetry
     - name: Cache Dependancies
       uses: actions/cache@v1.1.2
       with:
