--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,7 +77,7 @@ jobs:
     - name: Install tox
       run: pip install tox
     - name: Install Poetry
-      run: pip install poetry
+      run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
     - name: Build Package
       run: poetry build
     - name: Cache Dependancies
