--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,15 +70,17 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v2.0.0
+    - name: List Dirs
+      run: ls
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1.2.0
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install tox
-      run: pip3 install tox
+      run: pip install tox
     - name: Install Poetry
       run: |
-        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
+        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
         source $HOME/.poetry/env
     - name: Cache Dependancies
       uses: actions/cache@v1.1.2
