--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,8 +78,9 @@ jobs:
       run: pip install tox
     - name: Install Poetry
       run: |
-        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
-        source $HOME/.poetry/env
+        pip install poetry
+        # curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+        # source $HOME/.poetry/env
     - name: Cache Dependancies
       uses: actions/cache@v1.1.2
       with:
