--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,12 +68,20 @@ jobs:
       matrix:
         python-version: ["3.8"]
         os: [ubuntu-latest, windows-latest, macOS-latest]
+    env:
+      FLASK_SECRET_KEY: "GITHUB_ACTIONS_KEY"
     steps:
     - uses: actions/checkout@v2.0.0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1.2.0
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.1.0
+    - name: Configure MongoDB
+      run: |
+        mongo --port 27017
+        
     - name: Install tox
       run: pip install tox
     - name: Install Poetry
