updated handleing of ENV vars

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ python =
 [testenv]
 whitelist_externals = poetry
 description = Run tests
+setenv =
+    FLASK_SECRET_KEY = "TOX_SECRET_KEY"
 commands =
     poetry install -v
     poetry run pytest tests/
