added testing env vars

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,10 @@ whitelist_externals = poetry
 description = Run tests
 setenv =
     FLASK_SECRET_KEY = "TOX_SECRET_KEY"
+    DB_USER = "NaN"
+    DB_PASSWORD = "NaN"
+    DB_NAME = "NaN"
+    DB_NAMESPACE = "NaN"
 commands =
     poetry install -v
     poetry run pytest tests/
