--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,8 @@ setenv =
     DB_PASSWORD = "NaN"
     DB_NAME = "NaN"
     DB_NAMESPACE = "NaN"
+    MJ_KEY = "NaN"
+    MJ_PASSWORD = "NaN"
 commands =
     poetry install -v
     poetry run pytest tests/
