--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-pymongo = "^2.3.0"
 mailjet-rest = "^1.3.3"
 flask-login = "^0.5.0"
 flask-wtf = "^0.14.3"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
