--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mailjet-rest = "^1.3.3"
 flask-login = "^0.5.0"
 flask-wtf = "^0.14.3"
 gunicorn = "^20.0.4"
+dnspython = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
